@@ -957,3 +957,5 @@ s/bu_hash_tbl_pr/bu_hash_tbl_print/g
 	renamed for better consistency in hash table API and with other libbu API [7.24]
 s/dm_applicationfocus([[:space:]]);//g
 	only useful in older os x versions, users can now do the same thing via XQuartz preferences
+s/bu_vls_trunc2/bu_vls_trunc/g
+        removed duplicitous function in favor of more general version
